<resources>
    <string name="app_name">Laxmi Loan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tit_activity_2">Getting Start</string>
    <string name="card_apply_paragraph"><![CDATA[complete the application & and get evaluated to get the approved amount]]></string>
    <string name="select_gender">Select Gender</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="address">Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="register_now">Register Now</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="next">next</string>
    <string name="media_photos"><![CDATA[Media & Photos]]></string>
    <string name="to_upload_selfie">To upload selfie</string>
    <string name="device_information">Device Information</string>
    <string name="to_securely_link_application_to_phone">To securely link application to phone</string>
    <string name="we_need_few_permission">We need few permission!</string>
    <string name="to_check_your_eligibility_laon_amount"><![CDATA[To check your eligibility & laon amount]]></string>
    <string name="sms">SMS</string>
    <string name="loaction">Loaction</string>
    <string name="all_your_information_is_100_safe_secure"><![CDATA[All your information is 100% Safe & Secure]]></string>
    <string name="making_personal_loan_batter">MAKING PERSONAL LOAN BATTER!</string>
    <string name="terms_conditions"><![CDATA[T & C]]></string>
    <string name="enter_date_of_birth">Enter Date Of Birth</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="terms_conditions2">Terms Conditions</string>

    <string name="t__condition">The qualification, age, and experience details.\n The transactions made with the applicant’s bank. \nThe monthly and yearly income. \nThe current employer and the type of job he/she pursues.\n The nature of the business (applicable only for a self-employed). \nThe ability to repay the loan amount with the set interest rate.</string>
    <string name="pl">This privacy policy (“Privacy Policy”) is an electronic record in the form of an electronic contract formed under the Information Technology Act, 2000 and the rules made thereunder. This Privacy Policy does not require any physical, electronic or digital signature. \nThis Privacy Policy is a legally binding document between you and FlexiLoans. The terms of this Privacy Policy will be effective upon your acceptance of the same, by clicking on the “I Accept” checkbox available at https://loans.flexiloans.com/ and will govern the relationship between you and FlexiLoans for your use of the Website. By clicking on the “I Accept” checkbox, you also authorize us to contact you if you are registered with DND/NDNC registry. \nThis Privacy Policy describes the information that we collect from you, how We collect this information (directly or through third parties or which is automatically generated, when you interact with our Website and our mobile application (Mobile App)) and what We do with it after We collect it.       </string>
    <string name="about">Dear Customer,  It has been brought to our notice that certain unscrupulous individuals/ entities are issuing fake sanction letters purportedly issued by HDB Financial Services Limited to individuals. Such individuals/ entities demand fund transfer to an individual bank account for processing the loan application. \nThese individuals/ entities are fraudulently and illegally misusing HDB Financial Services Limited\'s trademark and/ or corporate name and/ or trade and/ or brand names to lure General Public and are both harming our reputation as well as exploiting General Public.\n By way of this notice, we intend to caution the General Public against such elements.</string>
</resources>